[tool.poetry]
name = "panda-patch"
version = "0.1.0"
description = "See changes made to datasets in terms of patches"
authors = ["Radhakrishna Sanka <rkrishnasanka@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "panda_patches"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate-patch = "panda_patch.cmdline:generate_patch_from_csv"
